<resources>
    <string name="app_name">Drip</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="avatar">Avatar</string>
    <string name="sign_in">SignIn</string>
    <string name="sign_up">SignUp</string>
    <string name="login">LOGIN</string>
    <string name="sign_in_or_sign_up">SignIn / SignUp</string>
    <string name="username">Username</string>
    <string name="username_or_email">Username / Email</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="nickname">Nickname</string>
    <string name="email">Email</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>
    <string name="choose_wordbook">Choose Wordbook</string>
    <string name="language">Language</string>
    <string name="language_zh">中文</string>
    <string name="language_en">English</string>
    <string name="language_auto">Auto</string>
    <string name="error">Error</string>
    <string name="holder_word">thumb</string>
    <string name="holder_phonetic">[θʌm]</string>
    <string name="holder_explain">n.(大)拇指</string>
    <string name="tip_unselected_wordbook">Unselected Wordbook</string>
    <string name="tip_username_or_email">Please input you username or email</string>
    <string name="tip_username">Please input you username</string>
    <string name="tip_password">Please input you password</string>
    <string name="tip_repeat_password">Please input you password again</string>
    <string name="tip_password_no_equal">Please make sure password equal to repeat password</string>
    <string name="tip_nickname">Please input you nickname</string>
    <string name="tip_email">Please input you email</string>
    <string name="tip_sign_in_error">Username or email could not match to password</string>
    <string name="tip_email_error">Please input you email rightly</string>
    <string name="tip_sign_in_succeed">Sign in succeed</string>
    <string name="tip_sign_in_failed">Sign in failed</string>
    <string name="tip_sign_up_succeed">Sign up succeed</string>
    <string name="tip_sign_up_failed">Sign up failed</string>
    <string name="tip_email_send_succeed">Send email succeed</string>
    <string name="tip_email_send_failed">Send email failed.</string>
    <string name="tip_send_email_to_reset">Send email to change the password</string>
    <string name="tip_input_email">Input you email</string>
    <string name="tip_input_new_email">Input you new email</string>
    <string name="tip_change_succeed">Change succeed</string>
    <string name="tip_change_failed">Change failed</string>
    <string name="tip_unknown_error">Unknown error</string>
    <string name="tip_save_succeed">Save Succeed</string>
    <string name="tip_save_failed">Save Failed</string>
    <string name="tip_create_failed">Create Failed</string>
    <string name="tip_create_succeed">Create Succeed</string>
    <string name="tip_delete_succeed">Delete Succeed</string>
    <string name="tip_delete_failed">Delete Failed</string>
    <string name="tip_total_word">Total Count\n%d</string>
    <string name="tip_current_target">Current Target: Learn %d Words, Review %d Words</string>
    <string name="tip_Lexical_item">Lexical Item</string>
    <string name="tip_value">Value</string>
    <string name="tip_key">Key</string>
    <string name="tip_in_the_query">In the Query</string>
    <string name="tip_query_failed">Query Failed</string>
    <string name="brackets_unverified">(Unverified)</string>
    <string name="tip_default_wordbook">Default Wordbook</string>
    <string name="tip_my_wordbook">User wordbook</string>
    <string name="act_sign_out">Sign Out</string>
    <string name="act_change_password">Change Password</string>
    <string name="act_change_email">Change Email</string>
    <string name="act_verify_email">Verify Email</string>
    <string name="act_start_learn">Start Learn</string>
    <string name="act_browse_in_card">Browse In Card</string>
    <string name="act_word_list">Word List</string>
    <string name="act_review_setting">Review Setting</string>
    <string name="act_add_Lexical_item">Add Lexical Item</string>
    <string name="act_delete_Lexical">Delete Lexical</string>
    <string name="act_delete_Lexical_item">Delete Lexical Item</string>
    <string name="ask_sign_out">Sure want to sign out?</string>
    <string name="ask_change_password">Sure want to change you password?</string>
    <string name="ask_change_email">Change email?</string>
    <string name="tab_complete_progress">Complete Progress</string>
    <string name="tab_learning_progress">Learning Progress</string>
    <string name="tab_word_count">Word Count</string>
    <string name="ask_verify_email">Verify Email</string>
    <string name="chk_yes">YES</string>
    <string name="chk_no">NO</string>
    <string name="chk_send">SEND</string>
    <string name="chk_out">OUT</string>
    <string name="lexical">Lexical</string>
    <string name="reading">Reading</string>
    <string name="discover">Discover</string>
    <string name="shop">Shop</string>
    <string name="system">Account</string>
    <string name="swipe">SwipeBack</string>
    <string name="go_swipe_back">SwipeBackActivity+Fragment</string>
    <string name="recommend">Recommend</string>
    <string name="hot">Hot</string>
    <string name="favorite">Favorite</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="image_transition">image_transition</string>
    <string name="press_again_exit">Press again to exit</string>
    <string name="send">Send</string>
    <string name="sign_in_success">Sign in successful, NavigationView\'s name has changed</string>
    <string name="can_swipe">can be swipe-back</string>
    <string name="upper_process">Passed to the upper processing!</string>
    <string name="anim_v">Set animation: Vertical</string>
    <string name="anim_h">Set animation: Horizontal</string>
</resources>