<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="16dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/tip_key"
                android:textCursorDrawable="@drawable/text_cursor_cyan"
                android:textSize="20sp"
                app:met_baseColor="@color/white"
                app:met_floatingLabel="highlight"
                app:met_minCharacters="1"
                app:met_primaryColor="@color/blue"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/tip_value"
                android:textCursorDrawable="@drawable/text_cursor_cyan"
                android:textSize="20sp"
                app:met_baseColor="@color/white"
                app:met_floatingLabel="highlight"
                app:met_minCharacters="1"
                app:met_primaryColor="@color/blue"/>

            <Button
                android:id="@+id/bt_go"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bt_shape"
                android:stateListAnimator="@drawable/state_list_animator_z"
                android:text="@string/go"
                android:textColor="#d3d3d3">
            </Button>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>