<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_sign_in"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp">

                <View
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:background="#2ea67f"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="25dp"
                    android:text="@string/login"
                    android:textColor="#FFCC00"
                    android:textSize="25sp"
                    android:textStyle="bold"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:paddingEnd="40dp"
                android:paddingStart="40dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColorHint="#c5c5c5">

                    <EditText
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/selector_bg_edit"
                        android:hint="@string/username_or_email"
                        android:inputType="textEmailAddress"
                        android:paddingBottom="2dp"
                        android:imeOptions="actionNext"
                        android:textColor="@color/colorAccent"
                        android:textCursorDrawable="@drawable/bg_input_cursor"
                        android:textSize="20sp"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:paddingEnd="40dp"
                android:paddingStart="40dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColorHint="#c5c5c5">

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/selector_bg_edit"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingBottom="2dp"
                        android:textColor="@color/colorAccent"
                        android:textCursorDrawable="@drawable/bg_input_cursor"
                        android:textSize="20sp"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/bt_go"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:background="@drawable/bt_shape"
                android:stateListAnimator="@drawable/state_list_animator_z"
                android:text="@string/go"
                android:textColor="#d3d3d3">
            </Button>

            <TextView
                android:id="@+id/bt_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:text="@string/forgot_your_password"
                android:textColor="#9a9a9a"
                android:textSize="12sp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/cv_sign_in"
        android:layout_alignEnd="@+id/cv_sign_in"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_add"
        android:transitionName="loginFab"
        app:fabSize="normal"/>

</RelativeLayout>