<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_width="320dp"
                android:layout_height="match_parent">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/cv_sign_up"
        android:layout_marginTop="-20dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_clear"
        android:transitionName="loginFab"
        app:fabSize="normal"/>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="#2ea67f"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:text="@string/register"
                android:textColor="#fff"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:paddingEnd="40dp"
                android:paddingStart="40dp"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#f0f7f4"
                    android:theme="@style/TextLabel">

                    <EditText
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/selector_bg_edit_2"
                        android:hint="@string/username"
                        android:inputType="textPersonName"
                        android:paddingBottom="2dp"
                        android:textColor="#f0f7f4"
                        android:textCursorDrawable="@drawable/bg_input_cursor_2"
                        android:textSize="20sp"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:paddingEnd="40dp"
                android:paddingStart="40dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#f0f7f4"
                    android:theme="@style/TextLabel">

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/selector_bg_edit_2"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingBottom="2dp"
                        android:textColor="#f0f7f4"
                        android:textCursorDrawable="@drawable/bg_input_cursor_2"
                        android:textSize="20sp"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:paddingEnd="40dp"
                android:paddingStart="40dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#f0f7f4"
                    android:theme="@style/TextLabel">

                    <EditText
                        android:id="@+id/et_repeat_password"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/selector_bg_edit_2"
                        android:hint="@string/repeat_password"
                        android:inputType="textPassword"
                        android:paddingBottom="2dp"
                        android:textColor="#f0f7f4"
                        android:textCursorDrawable="@drawable/bg_input_cursor_2"
                        android:textSize="20sp"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:paddingEnd="40dp"
                android:paddingStart="40dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#f0f7f4"
                    android:theme="@style/TextLabel">

                    <EditText
                        android:id="@+id/et_nickname"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/selector_bg_edit_2"
                        android:hint="@string/nickname"
                        android:inputType="textPersonName"
                        android:paddingBottom="2dp"
                        android:textColor="#f0f7f4"
                        android:textCursorDrawable="@drawable/bg_input_cursor_2"
                        android:textSize="20sp"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:paddingEnd="40dp"
                android:paddingStart="40dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#f0f7f4"
                    android:theme="@style/TextLabel">

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/selector_bg_edit_2"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:paddingBottom="2dp"
                        android:textColor="#f0f7f4"
                        android:textCursorDrawable="@drawable/bg_input_cursor_2"
                        android:textSize="20sp"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/bt_go"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/bt_shape_2"
                android:stateListAnimator="@drawable/state_list_animator_z"
                android:text="@string/next"
                android:textColor="#2fa881">
            </Button>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>