<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/fragment_wordbook_container_whole"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rotation="180"
        android:layout_gravity="center_vertical|top"
        android:background="@drawable/actionbar_shadow_up"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp">

        <View
            android:layout_width="1px"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bt_start_learn"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1px"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/bt_word_list"
            app:layout_constraintTop_toBottomOf="@+id/bt_start_learn"/>

        <Button
            android:id="@+id/bt_start_learn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_color_accent_mask"
            android:gravity="center"
            android:text="@string/act_start_learn"
            app:layout_constraintBottom_toTopOf="@+id/bt_word_list"
            app:layout_constraintEnd_toStartOf="@+id/bt_browse_in_card"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/bt_browse_in_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_color_accent_mask"
            android:gravity="center"
            android:text="@string/act_browse_in_card"
            app:layout_constraintBottom_toTopOf="@+id/bt_review_setting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/bt_start_learn"/>

        <Button
            android:id="@+id/bt_word_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_color_accent_mask"
            android:gravity="center"
            android:text="@string/act_word_list"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bt_review_setting"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/bt_review_setting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_color_accent_mask"
            android:gravity="center"
            android:text="@string/act_review_setting"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/bt_word_list"/>

        <!--<View-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="1px"-->
            <!--android:background="@color/qmui_config_color_gray_1"-->
            <!--android:layout_marginBottom="8dp"-->
            <!--app:layout_constraintBottom_toTopOf="@+id/bt_start_learn"/>-->

        <TextView
            android:id="@+id/tv_describe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="今天需要学习999个单词, 复习999个单词"
            android:autoLink="all"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/bt_start_learn"/>
    </android.support.constraint.ConstraintLayout>
</FrameLayout>